--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -1,10 +1,8 @@
 .content {
   padding-top: .75rem;
   padding-bottom: 1.25rem;
-}
 
-@media (min-width: 768px) {
-  .content {
+  @include media-breakpoint-up(md) {
     padding-top: 1.5rem;
     padding-bottom: 2rem;
   }
@@ -16,17 +14,7 @@ h1,
   font-weight: bold;
 }
 
-a,
-.page-link {
-  color: #007999;
-}
-
-a:hover,
-.page-link:hover {
-  color: #005066;
-}
-
-@media (min-width: 1024px) {
+@include media-breakpoint-up(lg) {
   .collapse.uncollapse-lg {
     display: block;
     height: auto !important;
@@ -40,11 +28,27 @@ a:hover,
 
 .grid .col {
   margin-bottom: 15px;
+
+  @include media-breakpoint-up(sm) {
+    .grid .col {
+      margin-bottom: 30px;
+    }
+  }
 }
 
-@media (min-width: 576px) {
-  .grid .col {
-    margin-bottom: 30px;
+.card {
+  transition: 0.5s;
+
+  &:hover {
+    box-shadow: 0 .125rem .75rem rgba(0, 0, 0, .15) !important;
+  }
+
+  a.card-body {
+    color: #17333e;
+  
+    &:hover {
+      text-decoration: none;
+    }
   }
 }
 
@@ -52,7 +56,7 @@ a.tile {
   display: block;
   padding: 1rem 1.25rem;
   background: #e8eeee;
-  border-radius: 4px;
+  border-radius: $border-radius;
   color: inherit;
   transition: 0.5s;
   height: 100%;
@@ -61,5 +65,5 @@ a.tile {
 a.tile:hover {
   text-decoration: none;
   box-shadow: 0 .125rem .75rem rgba(0,0,0,.15) !important;
-  background: white;
+  background: $white;
 }
